==> GuoJuny/stm32/Myiic.c <==
#include "stm32f10x.h"
#include "Delay.h"

\\初始化iic
\\W是写
void MYI2C_W_SCL(uint8_t BitValue)
{
  GPIO_WriteBit(GPIOB,GPIO_Pin_10,(BitAction)BitValue);
  Delay_us(10);
}

void MYI2C_W_SDA(uint8_t BitValue)
{
  GPIO_WriteBit(GPIOB,GPIO_Pin_11,(BitAction)BitValue);
  Delay_us(10);
}

uint8_t MyI2C_R_SDA(void)
{
  uint8_t BitValue;
  BitValue=GPIO_ReadInputDataBit(GPIOB,GPIO_Pin_11);
  Delay_us(10);
  return BitValue;
}

void MYI2C_Init(void)
{
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB,ENABLE);

  GPIO_InitTypeDef GPIO_InitStructure;
  GPIO_InitStructure.GPIO_Mode =GPIO_Mode_Out_OD;
  GPIO_InitStructure.GPIO_Pin =GPIO_Pin_10 | GPIO_Pin_11;
  GPIO_InitStructure.GPIO_Speed =GPIO_Speed_50MHz;
  GPIO_Init(GPIOB,&GPIO_InitStructure);

  GPIO_SetBits(GPIOB,GPIO_Pin_10 | GPIO_Pin_11);//scl和sda处于高电平，此时iic总线处于空闲状态
  
}
//起始条件
void MyI2C_Start(void)
{
  MyI2C_W_SDA(1);
  MYI2C_W_SCL(1);

  MyI2C_W_SDA(0);
  MYI2C_W_SCL(0);  

}
//终止条件
void MyI2C_Stop(void)
{
  MyI2C_W_SDA(0);
  MYI2C_W_SCL(1); 
  MyI2C_W_SDA(1);

}
//发送字节
void MyI2C_SendByte(void)
{
  uint8_t i;
  for(i=0;i<8;i++){
    MyI2C_W_SDA(Byte & (0x80 >> i));
    MYI2C_W_SCL(1);
    MYI2C_W_SCL(0);
  }

}
//接受字节
void MyI2C_ReceiveByte(void)
{
  uint8_t i,Byte=0x00;
  MyI2C_W_SDA(1);

  for(i=0;i<8;i++){
    MYI2C_W_SCL(1);
    if(MyI2C_R_SDA()==1){Byte |=(0x80 >> i);}
    MYI2C_W_SCL(0);
  }

}


//发送应答
void MyI2C_SendAck(uint8_t ACKBit)
{
    MyI2C_W_SDA(ACKBit);
    MYI2C_W_SCL(1);
    MYI2C_W_SCL(0);
}




//接受应答
void MyI2C_ReceiveAck(void)
{
  uint8_t ACKBit;
  MyI2C_W_SDA(1);
  MYI2C_W_SCL(1);
  ACKBit=MyI2C_R_SDA();
  MYI2C_W_SCL(0);
  return ACKBit;

}
